# FactCheck

./: .env.example  .gitignore  PLAN.md  PROJECT.md  README.md  RESEARCH.md  package.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml  requirements.txt  spike.py
apps/api/migrations/: 001_init.sql  001_searches.sql
apps/api/src/: main.py
apps/api/src/agents/: claim_decomposer.py  critic.py  evidence_retriever.py  source_scorer.py  synthesis.py
apps/api/src/features/cache/: keys.py  redis_cache.py  turso_cache.py
apps/api/src/features/history/: router.py  store.py
apps/api/src/features/verify/: pipeline.py  router.py
apps/api/src/lib/: gemini.py  tavily.py  turso.py  types.py
apps/api/tests/: conftest.py  test_agents_live.py  test_cache_keys.py  test_critic.py  test_recent_searches.py  test_redis_cache.py  test_source_scorer.py  test_tavily.py  test_turso_cache.py  test_types.py  test_verify_caching.py  test_verify_endpoint.py
apps/web/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.mts
apps/web/e2e/: happy-path.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: Meter.tsx
apps/web/src/features/metrics/: MetricsDashboard.tsx
apps/web/src/features/recent/: RecentSearches.tsx
apps/web/src/features/results/: ConfidenceBar.test.tsx  ConfidenceBar.tsx  ReasoningCard.tsx  ResultsPanel.tsx  SourceCard.test.tsx  SourceCard.tsx  VerdictBadge.test.tsx  (+1 more)
apps/web/src/lib/: api.ts  time.ts  types.ts  verdict.ts
docs/: 01-architecture.md  02-spike-results.md
(+4 files in other folders)
